charge up wright form

--- a/webPage/templates/result.html
+++ b/webPage/templates/result.html
@@ -1,7 +1,19 @@
 <!doctype html>
 <html>
    <body>
-        <p>Name is: {{ result.get('Name') }}</p>
+        <p>Name is: {{ result.get('Username') }}</p>
         <p>Password is: {{ result.get('Password') }}</p>
+
+        <p>Name is: {{ result.get('newUsername') }}</p>
+        <p>Password is: {{ result.get('newPassword') }}</p>
+        <p>CreditCardNum is: {{ result.get('CreditCardNum') }}</p>
+
+        <p>firstName is: {{ result.get('name') }}</p>
+        <p>Name is: {{ result.get('firstName') }}</p>
+        <p>phone is: {{ result.get('phone') }}</p>
+        <p>road is: {{ result.get('road') }}</p>
+        <p>roadNum is: {{ result.get('roadNum') }}</p>
+        <p>codePostal is: {{ result.get('codePostal') }}</p>
+        <p>commune is: {{ result.get('commune') }}</p>
    </body>
 </html>
