--- a/webPage/templates/start.html
+++ b/webPage/templates/start.html
@@ -6,11 +6,11 @@
    <body style="background-color: f0f0f0" >
       <DIV ALIGN="center">
         <form action = "http://localhost:5000/result" method = "POST">
-            <p>Username <input type = "text" name = "Name" placeholder = "Username" /></p>
-            <p>Password <input type = "text" name = "Password" placeholder = "Password"/></p>
+            <p>Username <input type = "text" name = "Username" placeholder = "Username" /></p>
+            <p>Password <input type = "password" name = "Password" placeholder = "Password"/></p>
             <p><input type = "submit" value = "submit" /></p>
             </form>
-        <p align="center">or</p>
+        <p ALIGN = "center">or</p>
         <form action = "http://localhost:5000/signIn" method = "POST">
             <p><input type = "submit" value = "S'inscrire" /></p>
             </form>
