correction bugs bdd

--- a/webPage/templates/signIn.html
+++ b/webPage/templates/signIn.html
@@ -9,8 +9,8 @@
          <p>Password <input type = "text" name = "newPassword" placeholder = "Password" /></p>
          <p>Credit card num. <input type = "text" name = "CreditCardNum" placeholder = "Credit card Num." /></p>
       <p>With charge up right ?</p>
-      <input type="button" name="vendeur" value="true" onclick="chargUpRights()">
-      <input type="button" name="vendeur" value="false" onclick="noChargUpRights()"> <br>
+      <input type="button" name="vendeur" value="Yes" onclick="chargUpRights()">
+      <input type="button" name="vendeur" value="No" onclick="noChargUpRights()"> <br>
       <div id="chargeUpForm" style='display:none' >
             <p>First name <input type = "text" name = "firstName" placeholder = " First name " /></p>
             <p>Name <input type = "text" name = "name" placeholder = " Name " /></p>
