debut interface user

--- a/webPage/templates/connected.html
+++ b/webPage/templates/connected.html
@@ -7,6 +7,18 @@
         <h1>you are now connected</h1>
         <p>Name is: {{ result.get('Username') }}</p>
         <p>Password is: {{ result.get('Password') }}</p>
-
+        <p></p>
+        <form action = "http://localhost:5000/consultScooters" method = "POST">
+            <p><input type = "submit" value = "consulter les trottinettes disponibles et leur localisation" /></p>
+            </form>
+        <form action = "http://localhost:5000/signIn" method = "POST">
+            <p><input type = "submit" value = "consulter les informations associées à chaque trottinette: état de la batterie, plaintes actuelles." /></p>
+            </form>
+        <form action = "http://localhost:5000/signIn" method = "POST">
+            <p><input type = "submit" value = "introduire une plainte (demande d'intervention)au sujet d'une trottinette" /></p>
+            </form>
+        <form action = "http://localhost:5000/consultTrips" method = "POST">
+            <p><input type = "submit" value = "consulter l'historique des déplacement effectués" /></p>
+            </form>
    </body>
 </html>
