--- a/webPage/templates/mechanic.html
+++ b/webPage/templates/mechanic.html
@@ -4,7 +4,8 @@
             </head>
    <body style="background-color: f0f0f0" >
       <DIV ALIGN="center">
-          <p>Mechanic</p>
+          <h1>Mechanic</h2>
+            <p> {{ lastname }}, {{ firstname }} is connected.</p>
 
 </body>
 </html>
