--- a/webPage/templates/infoScooters.html
+++ b/webPage/templates/infoScooters.html
@@ -3,7 +3,15 @@
             <title>lime 2.0</title>
             </head>
    <body style="background-color: f0f0f0" >
-        <DIV ALIGN="center"> 
-            <h1>consulter les informations associées à chaque trottinette: état de la batterie, plaintes actuelles.</h1>
+      <DIV ALIGN="center">
+        <ul>
+            {% for user in users %}
+            <li>
+                {% for elem in user %}
+                    {{ elem }}, 
+                {% endfor %}
+            </li>  
+            {% endfor %}
+            </ul>
 </body>
 </html>
