--- a/webPage/templates/introPlainte.html
+++ b/webPage/templates/introPlainte.html
@@ -4,6 +4,12 @@
             </head>
    <body style="background-color: f0f0f0" >
         <DIV ALIGN="center"> 
-            <h1>introduire une plainte au sujet d'une trottinette.</h1>
+            <h1>Introduire une plainte au sujet d'une trottinette.</h1>
+            <p>Introduire numero de la trottinette deffectueuse :</p>
+            <form action = "http://localhost:5000/infoPlainte" method = "POST">
+                <input type="text" name="numTrottinette">
+                <p><input type = "submit" value = "Submit" /></p>
+            </form>
+
 </body>
 </html>
