add table to present info

--- a/webPage/templates/consultTrips.html
+++ b/webPage/templates/consultTrips.html
@@ -4,14 +4,30 @@
             </head>
    <body style="background-color: f0f0f0" >
       <DIV ALIGN="center">
-        <ul>
-            {% for user in users %}
-            <li>
-                {% for elem in user %}
-                    {{ elem }}, 
-                {% endfor %}
-            </li>  
-            {% endfor %}
-            </ul>
+            <table style="width:100%">
+                    <style>
+                    table, th, td {
+                        border: 1px solid black;
+                      }
+                      </style>
+                      
+                    <tr>
+                      <th>numScooter</th>
+                      <th>userID</th>
+                      <th>sourceX</th>
+                      <th>sourceY</th>
+                      <th>destinationX</th>
+                      <th>destinationX</th>
+                      <th>startTime</th>
+                      <th>endTime</th>
+                    </tr>
+                    {% for user in users %}
+                    <tr>
+                        {% for elem in user %}
+                        <td>{{ elem }}</td>
+                        {% endfor %} 
+                    </tr>
+                    {% endfor %}
+                </table>
 </body>
 </html>
