add routes for mechanic

--- a/webPage/templates/connected.html
+++ b/webPage/templates/connected.html
@@ -18,7 +18,7 @@
             <p><input type = "submit" value = "consulter l'historique des déplacement effectués" /></p>
         </form>
         <div id="chargeUpForm" style='display:none' >
-            <form action = "http://localhost:5000/consultTrips" method = "POST">
+            <form action = "http://localhost:5000/manageCharge" method = "POST">
                 <p><input type = "submit" value = "prendre une trottinette pour la recharger et la rapporter ensuite." /></p>
             </form>
         <script>
