--- a/webPage/templates/mechanic.html
+++ b/webPage/templates/mechanic.html
@@ -4,15 +4,21 @@
             </head>
    <body style="background-color: f0f0f0" >
       <DIV ALIGN="center">
-            <table style="width:100%">
-                    <style>
-                    table, th, td {
-                        border: 1px solid black;
-                      }
-                      </style>
-                    {% for user in users %}
-                      <p>{{ user }}</p>
-                    {% endfor %}
-                </table>
+        <h1>you are now connected as mechanic</h1>
+        <form action = "http://localhost:5000/manageScooter" method = "POST">
+            <p><input type = "submit" value = "insérer/supprimer une trottinette dans le système" /></p>
+            </form>
+        <form action = "http://localhost:5000/actuScooter" method = "POST">
+            <p><input type = "submit" value = "actualiser le statut de chaque trottinette" /></p>
+            </form>
+        <form action = "http://localhost:5000/manageComplaints" method = "POST">
+            <p><input type = "submit" value = "gérer, traiter et clôturer les plaintes" /></p>
+            </form>
+        <form action = "http://localhost:5000/promoteUser" method = "POST">
+            <p><input type = "submit" value = "faire évoluer un utilisateur lambda en utilisateur avec droit de recharge des trottinettes" /></p>
+        </form>
+        <form action = "http://localhost:5000/printRequests" method = "POST">
+          <p><input type = "submit" value = "aficher les résultats des requêtes" /></p>
+      </form>
 </body>
 </html>
