--- a/webPage/templates/start.html
+++ b/webPage/templates/start.html
@@ -5,7 +5,7 @@
    <body style="background-color: f0f0f0" >
       <DIV ALIGN="center">
         <form action = "http://localhost:5000/connected" method = "POST">
-            <p>Username <input type = "text" name = "Username" placeholder = "Username" /></p>
+            <p>Card Num. <input type = "text" name = "Username" placeholder = "Username" /></p>
             <p>Password <input type = "password" name = "Password" placeholder = "Password"/></p>
             <p><input type = "submit" value = "submit" /></p>
             </form>
