--- a/webPage/templates/signIn.html
+++ b/webPage/templates/signIn.html
@@ -5,11 +5,11 @@
    <body style="background-color: f0f0f0" >
       <DIV ALIGN="center">
       <form action = "http://localhost:5000/result" method = "POST">
-         <p>Password <input type = "text" name = "newPassword" placeholder = "Password" /></p>
-         <p>Credit card num. <input type = "text" name = "CreditCardNum" placeholder = "Credit card Num." /></p>
+        <p>Credit card num. <input type = "text" name = "CreditCardNum" placeholder = "Credit card Num." /></p>
+        <p>Password <input type = "text" name = "newPassword" placeholder = "Password" /></p>
       <p>With charge up right ?</p>
-      <input type="button" name="vendeur" value="Yes" onclick="chargUpRights()">
-      <input type="button" name="vendeur" value="No" onclick="noChargUpRights()"> <br>
+      <input type="button" name="charger" value="Yes" onclick="chargUpRights()">
+      <input type="button" name="charger" value="No" onclick="noChargUpRights()"> <br>
       <div id="chargeUpForm" style='display:none' >
             <p>First name <input type = "text" name = "firstName" placeholder = " First name " /></p>
             <p>Name <input type = "text" name = "name" placeholder = " Name " /></p>
