--- a/webPage/templates/manageComplaints.html
+++ b/webPage/templates/manageComplaints.html
@@ -4,6 +4,14 @@
             </head>
    <body style="background-color: f0f0f0" >
       <DIV ALIGN="center">
-        <h1>gérer, traiter et clôturer les plaintes</h1>
+        <h1>gerer, traiter et cloturer les plaintes</h1>
+        <p>Inserer le numero de trottinette a reparer</p>
+        <!-- INSERER LISTE DE TROTINETTE A REPARER -->
+        <form action = "http://localhost:5000/scooterRepaired" method = "POST">
+                <p>Numero de trottinette a reparer <input type = "text" name = "numTrottinette" placeholder = "numTrottinette" /></p>
+                <p>Commentaire <input type = "text" name = "commentaire" placeholder = "commentaire" /></p>
+                <p><input type = "submit" value = "Submit" /></p>
+            </form>
 </body>
 </html>
+
