--- a/webPage/templates/mechanic.html
+++ b/webPage/templates/mechanic.html
@@ -6,19 +6,19 @@
       <DIV ALIGN="center">
         <h1>you are now connected as mechanic</h1>
         <form action = "http://localhost:5000/manageScooter" method = "POST">
-            <p><input type = "submit" value = "insérer/supprimer une trottinette dans le système" /></p>
+            <p><input type = "submit" value = "inserer/supprimer une trottinette dans le systeme" /></p>
             </form>
         <form action = "http://localhost:5000/actuScooter" method = "POST">
             <p><input type = "submit" value = "actualiser le statut de chaque trottinette" /></p>
             </form>
         <form action = "http://localhost:5000/manageComplaints" method = "POST">
-            <p><input type = "submit" value = "gérer, traiter et clôturer les plaintes" /></p>
+            <p><input type = "submit" value = "gerer, traiter et clôturer les plaintes" /></p>
             </form>
         <form action = "http://localhost:5000/promoteUser" method = "POST">
-            <p><input type = "submit" value = "faire évoluer un utilisateur lambda en utilisateur avec droit de recharge des trottinettes" /></p>
+            <p><input type = "submit" value = "faire evoluer un utilisateur lambda en utilisateur avec droit de recharge des trottinettes" /></p>
         </form>
         <form action = "http://localhost:5000/printRequests" method = "POST">
-          <p><input type = "submit" value = "aficher les résultats des requêtes" /></p>
+          <p><input type = "submit" value = "aficher les resultats des requêtes" /></p>
       </form>
 </body>
 </html>
