--- a/webPage/templates/connected.html
+++ b/webPage/templates/connected.html
@@ -9,13 +9,13 @@
             <p><input type = "submit" value = "consulter les trottinettes disponibles et leur localisation" /></p>
             </form>
         <form action = "http://localhost:5000/infoScooters" method = "POST">
-            <p><input type = "submit" value = "consulter les informations associées à chaque trottinette: état de la batterie, plaintes actuelles." /></p>
+            <p><input type = "submit" value = "consulter les informations associees a chaque trottinette: etat de la batterie, plaintes actuelles." /></p>
             </form>
         <form action = "http://localhost:5000/introPlainte" method = "POST">
             <p><input type = "submit" value = "introduire une plainte au sujet d'une trottinette" /></p>
             </form>
         <form action = "http://localhost:5000/consultTrips" method = "POST">
-            <p><input type = "submit" value = "consulter l'historique des déplacement effectués" /></p>
+            <p><input type = "submit" value = "consulter l'historique des deplacement effectues" /></p>
         </form>
         <div id="chargeUpForm" style='display:none' >
             <form action = "http://localhost:5000/manageCharge" method = "POST">
